bug fixing buttons wrapped the button icons in the <a> link

--- a/styles/tabs-nav.css
+++ b/styles/tabs-nav.css
@@ -493,7 +493,7 @@ header a:visited {
 }
 .list-btn img {
   width: 32px;
-  align-self: center;
+  margin: 0 auto;
 }
 
 .list-btn:hover {
